--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
             <div class="content">
                     <div class="download-section">
-                    <a href="Installateur.exe" class="download-btn" download>
+                    <a href="https://github.com/Milou76/Testonsite/releases/download/untagged-6654f79406639815f19f/Installateur.exe" class="download-btn" download>
                         <span class="download-icon">⬇️</span>
                         <span>Télécharger pour Windows</span>
                     </a>
